# boolean-tf

./: COPYING  boolean-tf.cabal
src/Control/: Boolean.hs
src/Data/: Boolean.hs
