Name:                boolean-tf
Version:             0.1.1
Cabal-Version:       >= 1.2
Synopsis:            Generalized booleans via type functions
Category:            Data
Description:
  Some classes for generalized boolean operations, using type functions.
  Derived from Conal Elliott's boolean package.
  .
  Copyright 2012 The University of Kansas; BSD3 license. 
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Package-Url:         http://ittc.ku.edu/csdl/fpg/Tools/Boolean
Copyright:           (c) 2012 The University of Kansas
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5
  Exposed-Modules:
                       Control.Boolean
                       
  ghc-options:         -Wall

--  ghc-prof-options:    -prof -auto-all 
